# eazyml_docs

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/_static/examples/augi/iris/: AUGI_on_IRIS.html
docs/_static/examples/cf/fintech/: demo_fintech.html
docs/_static/examples/dq/aframax/: DQA.html
docs/_static/examples/modeling/heart_attack/: heart_attack_demo.html
docs/_static/examples/modeling/walmart/: walmart_demo.html
docs/_static/examples/xai/fintech/: XAI_on_Fintech_Classification.html  XAI_on_Fintech_Regression.html
docs/_static/examples/xai/iris/: XAI_on_IRIS.html
docs/_static/examples/xai_image/brain_mri/: brain_mri.html
docs/notebooks/: augi.rst  counterfactual.rst  dq.rst  eazyml_notebook.rst  image_xai.rst  modeling.rst  xai.rst
docs/static/examples/augi/iris/: AUGI_Client.html
docs/static/examples/cf/airline_passengers_satisfaction/: demo_airline.html
docs/static/examples/xai/iris/: Explain_Client.html
docs/static/examples/xai_image/: brain_mri.html
