[build-system]
requires = ["setuptools>=42", "wheel", "sphinx", "sphinx-rtd-theme"]
build-backend = "setuptools.build_meta"

[project]
name = "EazyML"
version = "0.1.0"
description = "Documentation for EazyML project"
authors = [{name = "EazyML", email = "admin@eazyml.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0"
]

[tool.sphinx]
# Optional Sphinx-specific settings
source-dir = "docs"
build-dir = "docs/_build"
builder = "html"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"